# personal-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/routes/: slack.py
app/core/: config.py  database.py  kiwi.py
app/middleware/: logging.py
app/models/: reminder.py  todo.py  user_file.py
app/services/: agent_service.py  briefing_service.py  calendar_service.py  expense_service.py  file_service.py  graph_service.py  memory_service.py  news_service.py  reminder_service.py  resume_service.py  search_service.py  slack_service.py  todo_service.py  weather_service.py
app/templates/: resume_template.html
