[project]
name = "personal-assistant"
version = "0.1.0"
description = "AI Personal Assistant — Slack + LangGraph + Ollama"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.10",
    "chromadb>=0.6.0",
    "ddgs>=1.0.0",
    "fastapi>=0.136.3",
    "google-api-python-client>=2.160.0",
    "google-auth>=2.40.0",
    "httpx>=0.28.1",
    "langchain>=1.3.4",
    "langchain-google-genai>=2.1.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=0.5.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "slack-sdk>=3.42.0",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
